# claude-code-course-ragchatbot

./: CLAUDE.md  format_code.sh  frontend-changes.md  pyproject.toml  quality_check.sh  query_flow_diagram.md
backend/: ai_generator.py  config.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  requirements.txt  test_ai_generator.py  test_api_endpoints.py  test_config.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: .eslintrc.js  .prettierignore  .prettierrc  index.html  package-lock.json  package.json  script.js  style.css
